modified:   WpfApplication1.v12.suo 	modified:   WpfApplication1/MainWindow.xaml.cs 	modified:   WpfApplication1/Window1.xaml.cs 	modified:   WpfApplication1/Window2.xaml 	modified:   WpfApplication1/Window2.xaml.cs 	modified:   WpfApplication1/WpfApplication1.csproj 	modified:   WpfApplication1/bin/Debug/WpfApplication1.exe 	modified:   WpfApplication1/bin/Debug/WpfApplication1.pdb 	modified:   WpfApplication1/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache 	modified:   WpfApplication1/obj/Debug/Window2.baml 	modified:   WpfApplication1/obj/Debug/Window2.g.cs 	modified:   WpfApplication1/obj/Debug/Window2.g.i.cs 	modified:   WpfApplication1/obj/Debug/WpfApplication1.csproj.FileListAbsolute.txt

--- a/WpfApplication1/WpfApplication1.csproj
+++ b/WpfApplication1/WpfApplication1.csproj
@@ -52,6 +52,9 @@
     <StartupObject>
     </StartupObject>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
@@ -135,6 +138,7 @@
     <Compile Include="Window3.xaml.cs">
       <DependentUpon>Window3.xaml</DependentUpon>
     </Compile>
+    <Compile Include="XMLexport.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -191,6 +195,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="app.manifest" />
     <None Include="Income_ManagerDataSet.xsc">
       <DependentUpon>Income_ManagerDataSet.xsd</DependentUpon>
     </None>
