modified:   WpfApplication1/WpfApplication1.csproj 	modified:   WpfApplication1/bin/Debug/WpfApplication1.exe 	modified:   WpfApplication1/bin/Debug/WpfApplication1.pdb 	modified:   WpfApplication1/obj/Debug/WpfApplication1.exe 	modified:   WpfApplication1/obj/Debug/WpfApplication1.pdb
	WpfApplication1/XMLexport.cs
	WpfApplication1/app.manifest
	WpfApplication1/obj/Debug/WpfApplication1.csprojResolveAssemblyReference.cache

--- a/WpfApplication1/WpfApplication1.csproj
+++ b/WpfApplication1/WpfApplication1.csproj
@@ -195,7 +195,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="app.manifest" />
+    <None Include="app.manifest">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Income_ManagerDataSet.xsc">
       <DependentUpon>Income_ManagerDataSet.xsd</DependentUpon>
     </None>
